<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_marginLeft="@dimen/margin_left"
        android:src="@drawable/p0"
        android:focusable="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/all" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alpha"
        android:id="@+id/alpha"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:id="@+id/translate"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/alpha" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate"
        android:id="@+id/rotate"
        android:layout_below="@+id/alpha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scale"
        android:id="@+id/scale"
        android:layout_below="@+id/alpha"
        android:layout_toRightOf="@+id/alpha" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:id="@+id/all"
        android:layout_below="@+id/rotate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back"
        android:layout_below="@+id/scale"
        android:layout_toRightOf="@+id/rotate" />

</RelativeLayout>
